samples/_failures_safe/1761636910_515e07_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fc660fa4.c: In function ‘main’:
./samples/SAFE/__tmp_fc660fa4.c:136:5: error: expected identifier or ‘(’ at end of input
  136 |     Matrix mat1, mat2,
      |     ^~~~~~
./samples/SAFE/__tmp_fc660fa4.c:136:5: error: expected declaration or statement at end of input
